--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             <!--  -->
             <ul class="nav-list">
                 <li class="nav-items">
-                    <a href="/" class="active">
+                    <a href="./" class="active">
                         <span>HOME</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/sample">
+                    <a href="./sample">
                         <span>SAMPLE PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/columns">
+                    <a href="./columns">
                        <span>COLUMNS PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/contact">
+                    <a href="./contact">
                         <span>CONTACT</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/setup">
+                    <a href="./setup">
                         <span>SETUP</span>
                     </a>
                 </li>
