--- a/setup/index.html
+++ b/setup/index.html
@@ -13,7 +13,7 @@
     <div class="main-container">
         <!-- banner  -->
         <header>
-            <a href="/">
+            <a href="./">
                 <h1>fresh</h1>
             </a>
         </header>
@@ -28,27 +28,27 @@
             <!--  -->
             <ul class="nav-list">
                 <li class="nav-items">
-                    <a href="/">
+                    <a href="../">
                         <span>HOME</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/sample">
+                    <a href="../sample">
                         <span>SAMPLE PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/columns">
+                    <a href="../columns">
                        <span>COLUMNS PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/contact">
+                    <a href="../contact">
                         <span>CONTACT</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/setup" class="active">
+                    <a href="../setup" class="active">
                         <span>SETUP</span>
                     </a>
                 </li>
