--- a/columns/index.html
+++ b/columns/index.html
@@ -28,27 +28,27 @@
             <!--  -->
             <ul class="nav-list">
                 <li class="nav-items">
-                    <a href="/">
+                    <a href="../">
                         <span>HOME</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/sample">
+                    <a href="../sample">
                         <span>SAMPLE PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/columns" class="active">
+                    <a href="../columns" class="active">
                        <span>COLUMNS PAGE</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/contact">
+                    <a href="../contact">
                         <span>CONTACT</span>
                     </a>
                 </li>
                 <li class="nav-items">
-                    <a href="/setup">
+                    <a href="../setup">
                         <span>SETUP</span>
                     </a>
                 </li>
